Fixed some unreadable text in certain areas

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -19,6 +19,14 @@ body {
   background-color: black;
 }
 
+.form-control {
+  color: black;
+}
+
+.pager li > a:hover, .pager li > a:focus {
+  color: black;
+}
+
 // Header
 header.navbar.navbar-default {
 
