--- a/assets/less/cyborg/variables.less
+++ b/assets/less/cyborg/variables.less
@@ -178,7 +178,7 @@
 @input-bg-disabled:              @gray-lighter;
 
 //** Text color for `<input>`s
-@input-color:                    @text-color;
+@input-color:                    #000;
 //** `<input>` border color
 @input-border:                   @gray-dark;
 //** `<input>` border radius
